[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Player/PlayerStats.tscn" type="PackedScene" id=1]
[ext_resource path="res://UIElements/PlayerUI.gd" type="Script" id=2]

[node name="PlayerUI" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_right = 256.0
margin_bottom = 14.0
value = 100.0
percent_visible = false

[node name="ManaBar" type="ProgressBar" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 280.0
margin_bottom = 38.0
max_value = 50.0
value = 50.0
percent_visible = false

[node name="PlayerStats" parent="." instance=ExtResource( 1 )]
max_hp = 100
max_mp = 50

[connection signal="hp_changed" from="PlayerStats" to="." method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="." method="_on_PlayerStats_mp_changed"]
